--- a/css/style.css
+++ b/css/style.css
@@ -170,10 +170,8 @@ text-shadow: 5px 5px #ff0000;
       padding-top:20px;
       padding-bottom:20px;
       overflow-wrap: break-word;
-      margin-bottom :20px;
-      margin-left :457.667px;
-      margin-right :457.667px;
-      margin-top :20px;
+      height: auto;
+      margin: auto;
       padding:15px;
       text-align: center;
       font-family: Arial, Helvetica, sans-serif;
@@ -190,10 +188,8 @@ text-shadow: 5px 5px #ff0000;
     padding-top:20px;
     padding-bottom:20px;
     overflow-wrap: break-word;
-    margin-bottom :20px;
-    margin-left :457.667px;
-    margin-right :457.667px;
-    margin-top :20px;
+    height: auto;
+    margin: auto;
     padding:15px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
