--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,77 @@
+.headernav{
+  list-style-type:none;
+  text-align: left;
+  position: sticky;
+  background-color: rgba(255,255,255,0.4);
+  height: auto;
+  width: auto;
+  padding: 1px;
+  margin: auto;
+  font-size: 30px;
+}
+
+.paragrafe{
+  padding: 1px;
+  height: auto;
+  margin:auto;
+  font-size: 30px;
+  position:sticky;
+  overflow: hidden;
+
+}
+
+.header-content {
+  margin: auto;
+  padding: auto;
+  float:right;
+  font-size: 17px;
+}
+
+.header-button{
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  float:right;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.3s;
+}
+
+.header-button:hover {
+  background-color: #04aa6d;
+  color:;
+}
+
+.header-buttonc{
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  float:right;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+
 
 .judul{
-background: color #22577e; ;
 text-align: center;
 width: 55%;
+padding-top:120px ;
+margin-top:60px;;
 margin-left: 210px;
 margin-right: 240px;
 font-family: Arial, Helvetica, sans-serif;
 font-size: 70px;
 font-weight: bold;
 color:azure;
-text-shadow: 5px 5px #ff0000;
+text-shadow: 5px 5px orangered;
 }
 
-.judul2{
+.judul2 {
+
     padding: 0px;
     background: color #22577e; ;
     text-align: center;
@@ -26,30 +85,67 @@ text-shadow: 5px 5px #ff0000;
     }
 
 .penjelasan{
+    
+    height: auto;
     inline-size: 300px;
     overflow-wrap: break-word;
     padding:15px;
-    margin-top:100px;
-    background: color #22577e; ;
+    margin-top:90px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     font-size:25px;
     font-weight: bold;
-    color:azure; 
-    text-shadow: 3px 3px rosybrown;
+    color:white; 
+    text-shadow: 3px 3px #557c55;
 
 }
 
 .penjelasan2{
+    text-align: left;
     inline-size: 400px;
     overflow-wrap: break-word;
-    padding:20px;
-    margin-bottom: 50px;
-    text-align: left;
+    padding:10px;
+    margin-top: 20px;
+    margin-bottom: 60px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size:15px;
+    font-size:17px;
     font-weight:thin;
     color:azure; 
+}
+
+.qautama{
+  text-align: right;
+  inline-size: 400px;
+  overflow-wrap: break-word;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:25px;
+    font-weight: bold;
+    color:white; 
+    text-shadow: 3px 3px red;
+  height:auto;
+  width:auto;
+  margin: auto;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  margin-right: 40px;
+
+}
+
+
+.penjelasanq {
+  display: inline-block;
+  clear: both;
+  text-align:left;
+  inline-size: 400px;
+  overflow-wrap: break-word;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:20px;
+    font-weight: thin;
+    color:white; 
+  height:auto;
+  width: auto;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 
@@ -57,13 +153,12 @@ text-shadow: 5px 5px #ff0000;
     text-align: center;
     inline-size: 320px;
     background-color: rgba(255,255,255,0.2);
-      padding-top:20px;
-      padding-bottom:20px;
-
+      padding: 20px;
     overflow-wrap: break-word;
     color:whitesmoke;
     height: auto;
     margin: auto;
+    margin-bottom: 50px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     font-weight: bold;
@@ -100,12 +195,13 @@ text-shadow: 5px 5px #ff0000;
       }
 
       .boxcara{
-        margin: 10px;
+        margin: auto;
         width:auto;
         height:auto;
         padding:1px;
         box-shadow: 5px 5px #22577e;
         background-color: rgba(0,0,0,0.7);
+        margin: bottom 60px;;
       }
       
 
@@ -172,6 +268,8 @@ text-shadow: 5px 5px #ff0000;
       overflow-wrap: break-word;
       height: auto;
       margin: auto;
+      margin-top: 40px;
+      margin-bottom: 40px;
       padding:15px;
       text-align: center;
       font-family: Arial, Helvetica, sans-serif;
@@ -183,13 +281,15 @@ text-shadow: 5px 5px #ff0000;
   }
       
   .tanya2{
-    inline-size: 300px;
+    inline-size: 400px;
     background-color: grey ;
     padding-top:20px;
     padding-bottom:20px;
     overflow-wrap: break-word;
     height: auto;
     margin: auto;
+    margin-top: 60px;
+    margin-bottom: 40px;
     padding:15px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -214,4 +314,8 @@ text-shadow: 5px 5px #ff0000;
   font-size: 27px;
   font-weight: bold;
   color: whitesmoke;
+}
+
+.container:hover{
+  
 }
