--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 .headernav{
   list-style-type:none;
   text-align: left;
-  position: sticky;
-  background-color: rgba(255,255,255,0.4);
+  position: relative;
+  background-color: rgba(255,255,255,0.5);
   height: auto;
   width: auto;
   padding: 1px;
@@ -206,13 +206,10 @@ text-shadow: 5px 5px orangered;
       
 
       .boxgambar {
-        margin-top: 65px;
-    margin-right:55px ;
-    margin-bottom: 20px;
-    margin-left: 60px;
-        float: left;
-        height: 130px;
-        width: 130px;
+		margin:auto;
+        float: center;
+        height: 90px;
+        width: 90px;
         padding:1px;  
       }
 
@@ -301,21 +298,82 @@ text-shadow: 5px 5px orangered;
 }
 
 .centered {
+   transition: .5s ease;
+  opacity:0 ;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .container {
   position: relative;
   text-align: center;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: 27px;
+  font-size: 30px;
   font-weight: bold;
   color: whitesmoke;
 }
 
-.container:hover{
-  
+.gambarsenyap {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
+
+.containerdrop {
+  position: relative;
+    display: inline-block;
+
+  text-align: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  color: whitesmoke;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+
+.dropdown-content {
+  position: relative;
+  display: inline-block;
+  position: absolute;
+  background-color: rgba(255,255,255,0.2);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.desc {
+  padding: 5px;
+  text-align: center;
+  inline-size: 300px;
+  overflow-wrap: break-word;
+  font-size:15px;
+}
+
+
+.judulcara:hover .desc {
+  display: block;
+}
+
+
+.container:hover .gambarsenyap {
+  opacity: 1;
+}
+
+.container:hover .centered {
+  opacity: 1;
+}
+
+
+
